--- a/_posts/2026-02-23-hanabi.md
+++ b/_posts/2026-02-23-hanabi.md
@@ -27,9 +27,11 @@ In this post I will go through how I implemented a cooperative multi-agent envir
 To do this, I've chosen to work with [Hanabi](https://en.wikipedia.org/wiki/Hanabi_(card_game)), a simple cooperative card game, which is already a well-known environment in multi-agent RL (MARL) research.
 
 ---
+
 ## Motivation
 
-Many tasks involve some degree of exchange with other agents (human or AI). In traditional (non-LLM-based) RL, multi-agent setups are common and fairly well studied. However, in public/open-source LLM-based RL, multi-agent setups are arguably still very under-explored. Having said that, it seems that, recently, the field has shown much more interest in this topic: examples range from Anthropic's [multi-agent research system](https://www.anthropic.com/engineering/multi-agent-research-system) last year and this year's [Claude Code teams](https://code.claude.com/docs/en/agent-teams) to Kimi's [Agent Swarms](https://www.kimi.com/blog/agent-swarm.html), and even stuff like [Moltbook](https://www.moltbook.com/) and, perhaps less-obviously multi-agent setups like [RLMs](https://alexzhang13.github.io/blog/2025/rlm/) or [speculative forking](https://x.com/voooooogel/status/2015976774128341421). While most of these efforts focus on multi-agent orchestration at inference-time, the question of how to _train_ in multi-agent settings is still quite nascent, at least out in the open. I hope this work contributes to the open, shared research around these topics, especially the latter.
+Many tasks involve some degree of exchange with other agents (human or AI). In traditional (non-LLM-based) RL, multi-agent setups are common and fairly well studied. More broadly, multiagency connects to fundamental research on the nature of intelligence itself — programs like Blaise Agüera y Arcas' [What is Intelligence?](https://whatisintelligence.antikythera.org/) initiative frame social interaction, communication, and coordination as central to understanding cognition, not peripheral to it. However, in public/open-source LLM-based RL, multi-agent setups are arguably still very under-explored. Having said that, it seems recently the field has shown much more interest in the topic: examples range from Anthropic's [multi-agent research system](https://www.anthropic.com/engineering/multi-agent-research-system) last year and this year's [Claude Code teams](https://code.claude.com/docs/en/agent-teams) to Kimi's [Agent Swarms](https://www.kimi.com/blog/agent-swarm.html), and even stuff like [Moltbook](https://www.moltbook.com/) and, perhaps less-obviously multi-agent setups like [RLMs](https://alexzhang13.github.io/blog/2025/rlm/) or [speculative forking](https://x.com/voooooogel/status/2015976774128341421). While most of these efforts focus on multi-agent orchestration at inference-time, the question of how to _train_ in multi-agent settings is still quite nascent, at least out in the open. In the spirit of Prime Intellect's inspiring work, I hope this project contributes to the open, shared research around these topics, especially the latter.
+
 ## The game
 
 I first heard about Hanabi through the work of [Jakob Foerster](https://www.jakobfoerster.com/). I believe it was either through [The Hanabi Challenge](https://research.google/pubs/the-hanabi-challenge-a-new-frontier-for-ai-research/) or the [BAD for Deep MARL](https://arxiv.org/abs/1811.01458) papers. A friend of mine, [sci_sic](https://x.com/sci_sic), shortly after bought the game and encouraged me to do so too. It's a very fun game! And ever since then it's actually been my go-to whenever we have friends or family over at home.
@@ -50,6 +52,7 @@ Hanabi is a cooperative card game for 2-5 players where everyone holds their car
 
 So Hanabi is simultaneously like team [solitaire](https://en.wikipedia.org/wiki/Patience_(game)) + [blind-man's bluff](https://en.wikipedia.org/wiki/Blind_man%27s_bluff_(poker)) insofar as it has an inherent objective of arranging the cards in a specific order (i.e. the fireworks) but in a collaborative way, with the main constraint being the fact that each player has imperfect information about the game state.
 I'll expand on the things I find particularly interesting.
+
 ### Emergent communication
 
 From my experience, the richness of the game comes from the emergent communication conventions that arise naturally from the interaction between players. The clearest example of this might be when, during play, a participant wants to communicate something that is, so to speak, _under-determined_. For example, assume the fireworks show:
@@ -114,9 +117,11 @@ The cooperative aspect of Hanabi has another interesting technical implication: 
 ## Experiments
 
 There's nooks and crannies to all the experiments I did, but I will try to focus on the most salient things from here on out. One important thing to note, though, is that most of the experiments I did were in 2-player settings, mostly for the practical reason that adding more players increases the number trajectories used to train per-sample, making it harder to inject sample-diversity in the training steps, without a clear benefit on the objectives of this work.
+
 ### Preliminary results
 
 Before outlining the details about the environment, I would like to show some of the preliminary experiments I had with Hanabi, which illustrate the baseline behavior of models in this environment.
+
 #### Baseline
 
 One of the very first things I did after constructing a basic version of the environment was to benchmark some models. To my surprise, models like `gpt-4.1-mini` already did fairly well in the game, getting mean-scores of ~3.46 but quite a high variance in the score distribution, with some rollouts reaching as high as 18 points, which, by the standards of the game, is considered to be within the "excellent, crowd pleasing" range:
@@ -226,6 +231,7 @@ With the promise of the preliminary results, one first effort to scale-up the tr
 
 - Full Hanabi games can have 30+ turns. With thinking traces, the sequence length of trajectories can be quite large, at least for small-scale experiments. This was particularly costly during training because the training set-up had to use [branching rollouts](https://github.com/PrimeIntellect-ai/verifiers/pull/549), which is less efficient than the default interleaving strategy. To make longer runs more feasible the thinking traces were dropped and only actions were required.
 - The preliminary experiments were made using XML tags to extract the chosen action from the model's response. However, models like Qwen3 0.6B and 1.7B are non-instruct models and often fail to output a well-formatted response. Instead of using this, the [Qwen3-4B-Instruct-2507](https://huggingface.co/Qwen/Qwen3-4B-Instruct-2507) was used with tool-calling, which allowed me to bypass format reward signals during training.
+
 #### Environment
 
 The environment can be found [here](https://app.primeintellect.ai/dashboard/environments/nph4rd/hanabi), in Prime Intellect's [Environment Hub](https://www.primeintellect.ai/blog/environments). It has the following structure:
@@ -240,6 +246,7 @@ hanabi/
 ```
 
 I won't go into detail in all of it, but I'd like to point at least a few things:
+
 ##### The Player Class
 
 The [Player Class](https://app.primeintellect.ai/dashboard/environments/nph4rd/hanabi/files/dmgkauu44j81pne30qpz4xif/hanabi/player.py) represents a player in the game. It's main method is `take_turn`, which literally contains the logic to generate the player's action and execute it. The key logic is contained in the following lines:
@@ -273,6 +280,7 @@ The most important method here would be the `env_response`. In this method, the 
 One thing to note is that, by default, the verifiers library already handles the logic to get and add the model's response from the default model. In the case of this implementation, such model plays the role of the first player. Then we iterate over **the rest** of the players, since verifiers does not yet have native logic to handle multi-agent orchestration. What this entails is that the code ends up being slightly awkward, having a blurry line separating the *environment* from the *agent*.
 
 Finally, since Hanabi is an environment where players have asymmetric information, the class has a `get_observation` method, which generates state observations from each player's perspective. That is, to show to each player the hands of all the other players, but not themselves.
+
 #### Baseline
 
 With this implementation, I went for a much more extensive evaluation of proprietary models on the environment. The following table shows the top-5 models from the leaderboard, constructed with Prime Intellect's super useful [eval tool](https://docs.primeintellect.ai/tutorials-environments/evaluating) using the default of 5 examples x 3 rollouts:
@@ -288,6 +296,7 @@ Other models I evaluated included:
 - `openai/gpt-4.1-mini` at 3.467 (which I had already mentioned above)
 
 Importantly, the base score from Qwen/Qwen3-4B-Instruct-2507 was a mere 1.067. But now onto the good bits...
+
 #### Synthetic data and SFT warm-up
 
 Using the information from above, I generated a synthetic dataset of rollouts using Grok4-fast, which had the best cost-to-performance ratio from the models I tried. The dataset can be found [here](https://huggingface.co/datasets/nph4rd/hanabi) -- it contains quite diverse rollouts, ranging from scores in the lower 2-5  range to some examples with scores as high as 21 (amazing, by Hanabi's own standards). It has both rollouts from both player's perspectives.
@@ -299,6 +308,7 @@ Although the Qwen3-4B-Instruct model already fairly well in aligning with the re
 </div>
 
 After the SFT run, the model achieved a score of ~2.9, enough to start RL runs on top of that.
+
 #### RL
 
 With the SFT'd baseline, I ran an RL experiment split in two. The first, for a 100 steps, which reached a mean score of ~5.1, already above GPT-4.1-mini.
@@ -326,6 +336,7 @@ Overall, the trained models showed fairly good performance for relatively short 
 This challenge was all the more pressing considering that, as I mentioned above, the runs were made using the less efficient strategy of branching trajectories and that, naturally, having 2 players generating such trajectories meant that the effective sample size seen per training was a lot smaller than recommended configs, leading to noisier reward signal during training. It was clear that scaling-up the RL runs would lead to higher performance, but at the cost of learning from shorter, snappier experiments in smaller, simpler setups.
 
 Before that, however, another set of experiments was made with Prime Intellect's new [Hosted Training Platform](https://docs.primeintellect.ai/hosted-training/getting-started).
+
 #### Hosted RL
 
 Prime Intellect's new hosted training platform facilitates training setups by abstracting away most of the infra work you need. It manages multi-tenant LoRA deployments for inference and training, that allows much more efficient and much cheaper training runs, by leveraging shared hardware across other runs.
@@ -344,6 +355,7 @@ Leveraging the platform's checkpointing functionality, I extended the run until 
 <div style="text-align: center;">
   <img src="https://raw.githubusercontent.com/nph4rd/nph4rd.github.io/master/images/hosted_rl_extended.png" alt="" width="600">
 </div>
+
 ### Tiny Hanabi
 
 Though it's clear scaling-up the RL training runs would saturate the environment, I wanted to prove the hypothesis much faster and much more cheaply, given that this work is oriented towards informing better abstractions for multi-agent designs, and not so much to saturate the Hanabi env itself.
@@ -359,6 +371,7 @@ This time the synthetic data generation was done in two steps. First, as with th
 However, it contains only ~600 rollouts (i.e. 300 games, with 2 rollouts per game, one per player). In order to have a better coverage and higher-quality dataset a [second dataset](https://huggingface.co/datasets/nph4rd/tiny-hanabi-xml-4b-synth-full) was generated in an expert-iteration loop. That is, I first ran a Qwen3-4B through SFT+RL, and then used the trained model to generate the second set of more comprehensive rollouts. 
 
 To keep things short, I will show the results of the training runs that used this second dataset. To give perspective, a Qwen3 1.7B model SFT'd on this data for 20 steps already managed to achieve a score of ~3.1, about 50% of the total tiny Hanabi score, unlike the case for standard Hanabi where the SFT only bumped the score to about 12% of the total.
+
 #### RL
 
 An RL run over this SFT'd baseline quickly raises the model to top, reaching mean scores of 5.5 (out of 6); that is, 91% of the total score.
@@ -392,17 +405,21 @@ Multi-agent setups are obviously not limited to the kind of case that is covered
 In this work, the scope is limited to a fairly small space of potential interactions, but even with this in mind, some extensions over verifiers' abstractions can already be put in place. Importantly, the kind of training that was used in the previous experiments was pure joint-policy self-play. This avoids a lot of the complications arising from training multiple-policies. Furthermore, Hanabi's fully cooperative nature implies one does not need to care about per-agent rewards, again, simplifying the logic to a great extent.
 
 These considerations imply most of the changes needed to have a more ergonomic implementation of environments like Hanabi can be done on the verifiers side. A (draft) PR with a minimal set of changes can be found [here](https://github.com/PrimeIntellect-ai/verifiers/pull/871). I will briefly explain the most important features here.
+
 ### Agent class
 
 One of the most evidently awkward pieces of code in the original Hanabi implementation was the `Player` class. This class was needed to abstract away the logic of what each agent does, but should ideally be a shared artifact in the verifiers library.
 
 In the changes proposed, the `Agent` class is a a dataclass that representationally isolates each agent in a multi-agent env. It contains only essential attributes like an identifier for the agent, and system prompt, potentially specific to the role it takes in the environment.
+
 ### Protocol
 
 The other essential piece is the `Protocol` class, which defines how the multiple agents interact in the environment. It specifies turn order and agent interaction patterns, separate from the task/environment logic. This allows the same protocol (e.g., round-robin) to be reused across different tasks.
+
 ### MultiAgentEnv
 
 Finally, the `MultiAgentEnv` extends `MultiTurnEnv` to integrate the `Agent` and the `Protocol` into the class that manages the turn-order logic, environment logic, and handling of each agent's trajectories.
+
 ### Refactored Hanabi
 
 With the proposed changes above, the implementation of the Hanabi enviornment can be found [here](https://app.primeintellect.ai/dashboard/environments/nph4rd/hanabi-xml-multiagent) and extends the `MultiAgentEnv` with just some key lines, like the following:
@@ -434,9 +451,11 @@ super().__init__(
 where the `MultiAgentEnv` is instantiated with e `RounRobinProtocol`. 
 
 The rest of the environment logic is defined in the method `on_turn_complete` which lives in `MultiAgentEnv` and is defined to update the state of the environment after an agent's actions.
+
 ## Signaling and Coordination
 
 To put the new abstractions to the test, I decided to implement two more environments, tightly related to Hanabi's core dynamics: a [Lewis Signaling Game](https://en.wikipedia.org/wiki/Lewis_signaling_game) and a pure [Coordination Game](https://en.wikipedia.org/wiki/Coordination_game).
+
 ### Lewis signaling games
 
 A Lewis Signaling game is a type of [signaling game](https://en.wikipedia.org/wiki/Signaling_game "Signaling game") that features perfect common interest between players, and where their success is determined by their capacity to form communication conventions. Both these features -- emergent communication and common payoffs -- is shared with Hanabi.
@@ -564,6 +583,7 @@ Although these two simple environments are not particularly interesting per-se, 
 ## Directions
 
 In this work, I have shown that it is possible to implement simple, yet interesting, multi-agent environments using Prime Intellect's stack, and that even small-scale RL runs can yield meaningful improvements in cooperative play. There's a long path towards general support for the wide range of multi-agent interactions, but in the spirit of cooperation and open research that Prime Intellect is setting a clear precedent of, here are what I consider the most promising directions, which I plan to work on.
+
 ### Multi-policy training
 
 All the experiments in this work used self-play, meaning the same policy controls all agents. This is the simplest setup and it naturally leads to the emergence of conventions, but it also means those conventions can be arbitrary and brittle. This is actually pretty evident, after interacting with the **Tiny Hanabi Demo** for a few games! A natural next step would be training with multiple distinct policies rather than a single shared one. Most likely, this could be done in a memory-efficient way separate LoRA adapters for each policy. This opens up a much richer design space — asymmetric roles and heterogeneous capabilities— but also introduces challenges around credit assignment and non-stationarity that the current verifiers+prime-rl abstractions don't yet address.
